# QT5_TUTORIALS

./: README.md
date_and_time/: CMakeLists.txt
date_and_time/src/: compare_dates.cpp  current_datetime.cpp  date_01.cpp  leapyear.cpp  predefined_date_format.cpp
first_programs/: CMakeLists.txt
first_programs/include/: cursors.h  plusminus.cpp  plusminus.h  pushbutton.h
first_programs/src/: cursors.cpp  cursors_main.cpp  plusminus_main.cpp  pushbutton.cpp  pushbutton_main.cpp  simple.cpp  tooltip.cpp
introduction/: CMakeLists.txt
introduction/src/: hello_qt.cpp
menus_toolbars/: CMakeLists.txt
menus_toolbars/include/: another_menu.h  simple_menu.h
menus_toolbars/src/: another_menu.cpp  another_menu_main.cpp  simple_menu.cpp  simple_menu_main.cpp
strings/: CMakeLists.txt
strings/src/: qstring1.cpp  qstring10.cpp  qstring11.cpp  qstring12.cpp  qstring2.cpp  qstring3.cpp  qstring4.cpp  qstring5.cpp  qstring6.cpp  qstring7.cpp  qstring8.cpp  qstring9.cpp
strings/src/sample_c/: cprog.c
